--- a/eureka_config_server/pom.xml
+++ b/eureka_config_server/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.forezp</groupId>
-    <artifactId>eureka_server</artifactId>
+    <groupId>com.config.server</groupId>
+    <artifactId>eureka_config_server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>eureka_server</name>
+    <name>eureka_config_server</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -39,12 +39,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- 安全认证 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-
     </dependencies>
 
     <dependencyManagement>
