--- a/eureka_server/src/main/resources/application.yaml
+++ b/eureka_server/src/main/resources/application.yaml
@@ -9,3 +9,10 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+security:
+  basic:
+    enable: true #开启基于HTTP basic的认证
+  user: #配置用户的账号信息
+    name: itcast
+    password: itcast123
